complete with chat